Locked Properites are editable/keyable when the tooltip says not. #73297

Closed
opened 2020-01-21 15:56:33 +01:00 by CobraA · 3 comments

System Information
Windows 10 64 Bits.
Graphics card GeForce GTX 1080 Ti.

Blender Version
Broken: version: 2.83 hash: 4b6ce694c2

Short description of error

{F8292090 size = full}
the tooltip says "Lock editing of (a Property) in the Interface", this indicates you shouldn't be able to edit or key the values afterwards but actually you can which doesn't make sense, it only locks in the 3D View.

Locking properites should be non editable and non keyable.

Exact steps for others to reproduce the error

  • Default scene.
  • Open Sidebar.
  • Hover over the locked icon of one of the Transform Properties, read the tooltip.
  • Lock one of the Properites.
  • Change the value and key it.
  • Move few frames forward and key it again.
  • You can both edit and key locked Properties unlike what the tooltip says.

Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Windows 10 64 Bits. Graphics card GeForce GTX 1080 Ti. **Blender Version** Broken: version: 2.83 hash: 4b6ce694c2 **Short description of error** {[F8292090](https://archive.blender.org/developer/F8292090/Tip.gif) size = full} the tooltip says "**Lock editing of (a Property) in the Interface**", this indicates you shouldn't be able to edit or key the values afterwards but actually you can which doesn't make sense, it only locks in the 3D View. Locking properites should be non editable and non keyable. **Exact steps for others to reproduce the error** * Default scene. * Open Sidebar. * Hover over the locked icon of one of the Transform Properties, read the tooltip. * Lock one of the Properites. * Change the value and key it. * Move few frames forward and key it again. * You can both edit and key locked Properties unlike what the tooltip says. Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @CobraA

Added subscriber: @CobraA

This issue was referenced by 3436eea1f5

This issue was referenced by 3436eea1f5ccb458c383b8d86759a5cf6cf59381

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-01-21 16:55:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73297
No description provided.