Fix T73297: Incorrect lock properties tooltip